[package]
name = "ctd-to-owl-rs"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
curie = "0.0.8"
env_logger = "^0.8"
horned-owl = "^0.9"
humantime = "^2.0"
itertools = "0.10.0"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
minidom = "^0.13"
quick-xml = { version = "^0.22", features = [ "default", "serialize" ] }
rayon = "^1.5"
regex = "^1.4"
serde = { version = "^1.0", features = [ "derive" ] }
serde_derive = "^1.0"
serde_json = "^1.0"
serde-xml-rs = "0.4.1"
structopt = "^0.2"
ureq = "^2.0"
void = "^1.0"
quickxml_to_serde = "^0.4"
xmltree = "^0.10"
#node2object = "^0.1"

