[package]
name = "ctd-to-owl-rs"
version = "0.1.0"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
curie = "0.0.8"
env_logger = "^0.9"
horned-owl = "^0.9"
humantime = "^2.1"
itertools = "^0.10"
lazy_static = "^1.3"
log = { version = "^0.4", features = ["std"] }
rayon = "^1.5"
regex = "^1.5"
serde = { version = "^1.0", features = [ "derive" ] }
serde_derive = "^1.0"
serde_json = "^1.0"
structopt = "^0.3"
ureq = "^2.2"
xmltree = "^0.10"

